tests/snapshots/grpc_health/golden_grpc_health__not_serving_service.snap
---
source: tests/golden_grpc_health.rs
expression: capture
---
HealthResponseCapture {
    scenario: "not_serving_service",
    request: HealthCheckRequest {
        service: "unhealthy.service.Example",
    },
    response: Ok(
        HealthCheckResponse {
            status: NotServing,
        },
    ),
    service_state: ServiceStateSnapshot {
        services: [
            (
                "",
                NotServing,
            ),
        ],
        status_counts: StatusCounts {
            unknown: 0,
            serving: 0,
            not_serving: 1,
            service_unknown: 0,
        },
    },
    metadata: ResponseCaptureMetadata {
        test_name: "not_serving_service",
        description: "Health check for service explicitly set to NotServing status",
        async_method: false,
    },
}
